# fingerprint-payments

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  MATCHING_REFACTOR.md  Makefile  README.md  SECURITY.md  fingerpay.db  main.py  nixpacks.toml  pos_authenticate.py  pos_enroll.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 4305639accaa_add_indexes_and_fk_constraints.py  9db10166ac38_baseline_schema.py  c3e7f2a9b1d4_replace_fingerprint_descriptor_with_per_blob_storage.py  d8f4e2c1a9b3_add_merchant_billing.py
app/: config.py  main.py
app/db/: __init__.py  connection.py  merchants.py  schema.py  sessions.py  tokens.py  transactions.py  users.py
app/routes/: __init__.py  authenticate.py  customers.py  deps.py  enroll.py  merchants.py  pay.py  pos.py  pos_auth.py  webhooks.py
app/services/: biometrics.py  cleanup.py  crypto.py  email.py  jwt.py  stripe.py
docs/: API.md  ARCHITECTURE.md  BIOMETRIC_DATA_POLICY.md  CI_CD.md  CODING_STANDARDS.md  DATABASE.md  DATA_FLOW.md  DATA_RETENTION.md  DEFERRED.md  DISASTER_RECOVERY.md  GIT_WORKFLOW.md  INCIDENT_RESPONSE.md  ISSUES.md  KEY_MANAGEMENT.md  OBSERVABILITY.md  ONBOARDING.md  OPERATIONS.md  PCI_COMPLIANCE.md  PLAN.md  POSTMORTEM_TEMPLATE.md  POS_SETUP.md  PRIVACY.md  README.md  RELEASE_PROCESS.md  ROADMAP.md  SECURITY.md  TESTING.md  THREAT_MODEL.md  TODO.md
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-dual-database-sqlite-postgres.md  0003-stripe-as-system-of-record.md  0004-biometric-encryption-at-rest.md  0005-single-process-pilot-constraint.md  0006-decouple-monthly-fee-from-transactions.md
docs/rfc/: TEMPLATE.md
pipeline/: database.py  extractor.py
routes/: authenticate.py  customers.py  enroll.py  merchants.py  pay.py  pos.py
static/: customer-portal.html  enroll.html  index.html  kiosk.html  merchant-dashboard.html  merchant-login.html  merchant-reset-password.html  merchant-signup.html
tests/: conftest.py
tests/integration/: test_customer_portal.py  test_enroll_flow.py  test_health.py  test_merchant_lifecycle.py  test_webhooks.py
tests/unit/: test_biometrics.py  test_config.py  test_crypto.py  test_jwt.py  test_stripe.py
utils/: crypto.py  jwt.py  stripe_client.py
