# FingerPay — project configuration
# This coexists with requirements.txt until we fully migrate to pyproject.toml
# for dependency management. For now it configures tooling only.

[project]
name = "fingerpay"
version = "0.1.0"
description = "Pay with your finger. Fingerprint-based payments powered by Stripe."
requires-python = ">=3.11"
license = {text = "MIT"}

# ── Black ────────────────────────────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py311"]

# ── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print (no print() in prod code)
]
ignore = [
    "E501",   # line too long — black handles this
    "S101",   # assert usage — acceptable in tests
    "S104",   # binding to all interfaces — intentional for 0.0.0.0
    "S311",   # random for non-crypto — we use secrets for crypto; random for verification codes is acknowledged
    "B008",   # function call in default arg — FastAPI Depends/Header pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]  # asserts and hardcoded passwords are fine in tests

[tool.ruff.lint.isort]
known-first-party = ["pipeline", "routes", "utils"]

# ── Mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # tighten to true once baseline passes
ignore_missing_imports = true  # many deps lack stubs

# ── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-x -q --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

# ── Coverage ─────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "__pycache__/*",
    "temp_uploads/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 0  # increase to 70 once test suite exists
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]
