# FingerPay — project configuration
# This coexists with requirements.txt until we fully migrate to pyproject.toml
# for dependency management. For now it configures tooling only.

[project]
name = "fingerpay"
version = "0.1.0"
description = "Pay with your finger. Fingerprint-based payments powered by Stripe."
requires-python = ">=3.11"
license = {text = "MIT"}

# ── Black ────────────────────────────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py311"]

# ── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print (no print() in prod code)
]
ignore = [
    "E501",   # line too long — black handles this
    "S101",   # assert usage — acceptable in tests
    "S104",   # binding to all interfaces — intentional for 0.0.0.0
    "S311",   # random for non-crypto — we use secrets for crypto; random for verification codes is acknowledged
    "S608",   # SQL injection via f-string — false positive; our queries use PH parameterized placeholders
    "S110",   # try/except/pass — intentional in migration scripts
    "SIM105", # contextlib.suppress — try/except/pass is clearer in migrations
    "B008",   # function call in default arg — FastAPI Depends/Header pattern
    "B904",   # raise from — will add systematically later
    "B905",   # zip strict — not needed for our dict(zip(cols, row)) pattern
    "C408",   # dict() vs {} — acceptable in Stripe params builder
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "E402", "B017"]  # asserts, hardcoded passwords, late imports, blind exceptions
"alembic/**" = ["E402", "UP"]  # alembic templates have their own structure
"app/routes/merchants.py" = ["E402"]  # limiter must be defined before local imports that use it
"app/routes/customers.py" = ["E402"]  # same pattern
"pos_enroll.py" = ["T201", "S113"]   # CLI script: print and requests without timeout are intentional

[tool.ruff.lint.isort]
known-first-party = ["pipeline", "routes", "utils"]

# ── Mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # tighten to true once baseline passes
ignore_missing_imports = true  # many deps lack stubs

# ── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-x -q --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

# ── Coverage ─────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "__pycache__/*",
    "temp_uploads/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 0  # increase to 70 once test suite exists
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]
